lanecwe-Prod/src/objects/Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting is used to enable/disable all apex triggers</description>
    <fields>
        <fullName>InactivatSetAccountOwnerFromSalesPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate SetAccountOwnerFromSalesPrimaryOwner trigger. Please set this as True if you want to inactivate SetAccountOwnerFromSalesPrimaryOwner trigger</description>
        <inlineHelpText>This is used to inactivate SetAccountOwnerFromSalesPrimaryOwner trigger. Please set this as True if you want to inactivate SetAccountOwnerFromSalesPrimaryOwner trigger</inlineHelpText>
        <label>InactivatSetAccountOwnerFromSalesPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateCheckAssignmentRuleOnLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate CheckAssignmentRuleOnLead trigger. Please set this as True if you want to inactivate CheckAssignmentRuleOnLead trigger</description>
        <label>InactivateCheckAssignmentRuleOnLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateCheckSalesRepExceptionOnComp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate CheckSalesRepExceptionOnCompany trigger. Please set this as True if you want to inactivate CheckSalesRepExceptionOnCompany trigger</description>
        <label>InactivateCheckSalesRepExceptionOnComp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateCreateCampaignHistoryFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate CreateCampaignHistoryFromLead trigger. Please set this as True if you want to inactivate CreateCampaignHistoryFromLead trigger</description>
        <inlineHelpText>This is used to inactivate CreateCampaignHistoryFromLead trigger. Please set this as True if you want to inactivate CreateCampaignHistoryFromLead trigger</inlineHelpText>
        <label>InactivateCreateCampaignHistoryFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetAccountOnCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate SetAccountOnCompany trigger. Please set this as True if you want to inactivate SetAccountOnCompany trigger</description>
        <inlineHelpText>This is used to inactivate SetAccountOnCompany trigger. Please set this as True if you want to inactivate SetAccountOnCompany trigger</inlineHelpText>
        <label>InactivateSetAccountOnCompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetAccountOwnerFromCompany__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to inactivate SetAccountOwnerFromCompany trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
        <label>InactivateSetAccountOwnerFromCompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetAccountPartnerRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate SetAccountPartnerRelationshipOnCompany trigger. Please set this as True if you want to inactivate SetAccountPartnerRelationshipOnCompany  trigger</description>
        <inlineHelpText>This is used to inactivate SetAccountPartnerRelationshipOnCompany trigger. Please set this as True if you want to inactivate SetAccountPartnerRelationshipOnCompany  trigger</inlineHelpText>
        <label>InactivateSetAccountPartnerRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetAccountStatusOnOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate SetAccountStatusOnOpportunity trigger. Please set this as True if you want to inactivate SetAccountStatusOnOpportunity trigger</description>
        <label>InactivateSetAccountStatusOnOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetAccountTeamRollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate InactivateSetAccountTeamRollup trigger. Please set this as True if you want to inactivate InactivateSetAccountTeamRollup trigger</description>
        <inlineHelpText>This is used to inactivate InactivateSetAccountTeamRollup trigger. Please set this as True if you want to inactivate InactivateSetAccountTeamRollup trigger</inlineHelpText>
        <label>InactivateSetAccountTeamRollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetCompanyCountOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate InactivateSetCompanyCountOnAccount trigger. Please set this as True if you want to inactivate InactivateSetCompanyCountOnAccount trigger</description>
        <inlineHelpText>This is used to inactivate InactivateSetCompanyCountOnAccount trigger. Please set this as True if you want to inactivate InactivateSetCompanyCountOnAccount trigger</inlineHelpText>
        <label>InactivateSetCompanyCountOnAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetCoporateEntityRollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate SetCoporateEntityRollup trigger. Please set this as True if you want to inactivate SetCoporateEntityRollup trigger</description>
        <inlineHelpText>This is used to inactivate SetCoporateEntityRollup trigger. Please set this as True if you want to inactivate SetCoporateEntityRollup trigger</inlineHelpText>
        <label>InactivateSetCoporateEntityRollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetDefaultCaseUsersField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is  to reset case trigger to default the user fields.
trigger Name:SetDefaultCaseUserField</description>
        <label>InactivateSetDefaultCaseUsersField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetDefaultContactUsersField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to Inactivate the trigger: SetDefaultContactUserField</description>
        <label>InactivateSetDefaultContactUsersField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetDefaultEventValuesFromOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate SetDefaultEventValuesFromOwner trigger. Please set this as True if you want to inactivate SetDefaultEventValuesFromOwner trigger.</description>
        <inlineHelpText>This is used to inactivate SetDefaultEventValuesFromOwner trigger. Please set this as True if you want to inactivate SetDefaultEventValuesFromOwner trigger.</inlineHelpText>
        <label>InactivateSetDefaultEventValuesFromOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetDefaultLeadRegionField__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to inactivate SetDefaultLeadRegionField trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
        <label>InactivateSetDefaultLeadRegionField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetDefaultOpportunityRegionFie__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to inactivate SetDefaultOpportunityRegionField trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
        <label>InactivateSetDefaultOpportunityRegionFie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateSetDefaultTaskValuesFromOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to inactivate InactivateSetDefaultTaskValuesFromOwner trigger. Please set this as True if you want to inactivate InactivateSetDefaultTaskValuesFromOwner trigger</description>
        <inlineHelpText>This is used to inactivate InactivateSetDefaultTaskValuesFromOwner trigger. Please set this as True if you want to inactivate InactivateSetDefaultTaskValuesFromOwner trigger</inlineHelpText>
        <label>InactivateSetDefaultTaskValuesFromOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InactivateUpdateExistingLeadsAndContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to inactivate UpdateExistingLeadsAndContacts trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
        <label>InactivateUpdateExistingLeadsAndContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactivate_SetAccountDefaultRegion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used to inactivate SetAccountDefaultRegion trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
        <label>Inactivate SetAccountDefaultRegion</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>